--- a/Menu1.html
+++ b/Menu1.html
@@ -33,9 +33,10 @@
 			<div class="menu">
 				<div class="menu__restaurant">
 					<h1 class="menu__heading">La palette du goût</h1>
-					<i class="far fa-heart menu__like">
+					<div class="menu__like">
+						<i class="far fa-heart"></i>
 						<div class="menu__full-like"><i class="fas fa-heart"></i></div>
-					</i>
+					</div>
 				</div>
 
 				<div class="menu__part">
@@ -48,9 +49,9 @@
 							<p class="choice__side">Au piment d'Espelette</p>
 							<p class="choice__price">25€</p>
 						</div>
-						<button class="choice__select">
+						<div class="choice__select">
 							<i class="fas fa-check-circle"></i>
-						</button>
+						</div>
 					</div>
 
 					<div class="choice choice--2">
@@ -59,7 +60,7 @@
 							<p class="choice__side">Et ses copeaux de truffe noire</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--3">
@@ -68,7 +69,7 @@
 							<p class="choice__side">Assaisonné à la truffe sur lit de caviar</p>
 							<p class="choice__price">20€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -82,7 +83,7 @@
 							<p class="choice__side">Accompagné de sa ribambelle de légumes</p>
 							<p class="choice__price">40€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--5">
@@ -91,7 +92,7 @@
 							<p class="choice__side">À la truffe noire sur sa purée de panais</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--6">
@@ -100,7 +101,7 @@
 							<p class="choice__side">Aux agrumes</p>
 							<p class="choice__price">44€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -114,7 +115,7 @@
 							<p class="choice__side">Revisité</p>
 							<p class="choice__price">18€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--8">
@@ -123,7 +124,7 @@
 							<p class="choice__side">Et glace à la vanille de Madagascar</p>
 							<p class="choice__price">22€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--9">
@@ -132,7 +133,7 @@
 							<p class="choice__side">Au piment d'Espelette et à la truffe noire</p>
 							<p class="choice__price">23€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 				
