--- a/Menu2.html
+++ b/Menu2.html
@@ -33,9 +33,10 @@
 			<div class="menu">
 				<div class="menu__restaurant">
 					<h1 class="menu__heading">La note enchantée</h1>
-					<i class="far fa-heart menu__like">
+					<div class="menu__like">
+						<i class="far fa-heart"></i>
 						<div class="menu__full-like"><i class="fas fa-heart"></i></div>
-					</i>
+					</div>
 				</div>
 
 				<div class="menu__part">
@@ -48,7 +49,7 @@
 							<p class="choice__side">Accompagnés de leur crème à la truffe</p>
 							<p class="choice__price">25€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--2">
@@ -57,7 +58,7 @@
 							<p class="choice__side">Sur blini à la farine de blé noir</p>
 							<p class="choice__price">20€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--3">
@@ -66,7 +67,7 @@
 							<p class="choice__side">Mariné aux zestes d'orange</p>
 							<p class="choice__price">20€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--4">
@@ -75,7 +76,7 @@
 							<p class="choice__side">Confiture de figue et pain toasté</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -89,7 +90,7 @@
 							<p class="choice__side">Sur lit de purée de céleri-rave</p>
 							<p class="choice__price">40€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--6">
@@ -98,7 +99,7 @@
 							<p class="choice__side">Purée de patate douce</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--7">
@@ -107,7 +108,7 @@
 							<p class="choice__side">Et riz sauvage aux zestes de citron</p>
 							<p class="choice__price">44€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -121,7 +122,7 @@
 							<p class="choice__side">Glace au caramel brun et sel de Guérande</p>
 							<p class="choice__price">18€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--9">
@@ -130,7 +131,7 @@
 							<p class="choice__side">Avec son coulis de citron</p>
 							<p class="choice__price">22€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--10">
@@ -139,7 +140,7 @@
 							<p class="choice__side">Déstructurée</p>
 							<p class="choice__price">23€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 				
