--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 					<figcaption>
 						<h3 class="restaurant__heading">La palette du goût</h3>
 						<p class="restaurant__location">Ménilmontant</p>
-						<i class="far fa-heart restaurant__like">
+						<div class="restaurant__like">
+							<i class="far fa-heart"></i>
 							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
-						</i>
+						</div>
 					</figcaption>
 				</figure>
 			</a>
@@ -79,9 +80,10 @@
 					<figcaption>
 						<h3 class="restaurant__heading">La note enchantée</h3>
 						<p class="restaurant__location">Charonne</p>
-						<i class="far fa-heart restaurant__like">
+						<div class="restaurant__like">
+							<i class="far fa-heart"></i>
 							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
-						</i>
+						</div>
 					</figcaption>
 				</figure>
 			</a>
@@ -92,9 +94,10 @@
 					<figcaption>
 						<h3 class="restaurant__heading">À la française</h3>
 						<p class="restaurant__location">Cité Rouge</p>
-						<i class="far fa-heart restaurant__like">
+						<div class="restaurant__like">
+							<i class="far fa-heart"></i>
 							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
-						</i>
+						</div>
 					</figcaption>
 				</figure>
 			</a>
@@ -105,9 +108,10 @@
 					<figcaption>
 						<h3 class="restaurant__heading">Le délices des sens</h3>
 						<p class="restaurant__location">Folie-Méricourt</p>
-						<i class="far fa-heart restaurant__like">
+						<div class="restaurant__like">
+							<i class="far fa-heart"></i>
 							<div class="restaurant__full-like"><i class="fas fa-heart"></i></div>
-						</i>
+						</div>
 					</figcaption>
 				</figure>
 			</a>
