--- a/Menu4.html
+++ b/Menu4.html
@@ -33,9 +33,10 @@
 			<div class="menu">
 				<div class="menu__restaurant">
 					<h1 class="menu__heading">Le délice des sens</h1>
-					<i class="far fa-heart menu__like">
+					<div class="menu__like">
+						<i class="far fa-heart"></i>
 						<div class="menu__full-like"><i class="fas fa-heart"></i></div>
-					</i>
+					</div>
 				</div>
 
 				<div class="menu__part">
@@ -48,7 +49,7 @@
 							<p class="choice__side">Assaisonné au yuzu</p>
 							<p class="choice__price">25€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--2">
@@ -57,7 +58,7 @@
 							<p class="choice__side">Et sa farandole de petits légumes</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--3">
@@ -66,7 +67,7 @@
 							<p class="choice__side">Aux truffes</p>
 							<p class="choice__price">20€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -80,7 +81,7 @@
 							<p class="choice__side">Et sa crème de truffe</p>
 							<p class="choice__price">40€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--5">
@@ -89,7 +90,7 @@
 							<p class="choice__side">Et ses légumes de saison</p>
 							<p class="choice__price">35€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--6">
@@ -98,7 +99,7 @@
 							<p class="choice__side">Et sa purée de panais</p>
 							<p class="choice__price">44€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 
@@ -112,7 +113,7 @@
 							<p class="choice__side">Du chef</p>
 							<p class="choice__price">18€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--8">
@@ -121,7 +122,7 @@
 							<p class="choice__side">Revisitée</p>
 							<p class="choice__price">22€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 
 					<div class="choice choice--9">
@@ -130,7 +131,7 @@
 							<p class="choice__side">À la noisette</p>
 							<p class="choice__price">23€</p>
 						</div>
-						<button class="choice__select"><i class="fas fa-check-circle"></i></button>
+						<div class="choice__select"><i class="fas fa-check-circle"></i></div>
 					</div>
 				</div>
 				
