--- a/Menu3.html
+++ b/Menu3.html
@@ -7,7 +7,7 @@
 		<script src="https://kit.fontawesome.com/199083e587.js" crossorigin="anonymous"></script>
 		<title>Menu - La palette du goût</title>
 	</head>
-	<body class="restaurant">
+	<body class="menu-page">
 
 		<!--Progress bar-->
 		<div class="loader">
